--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -9,8 +9,8 @@ resources:
 #- argocd/namespace-cloudpak.yaml
 #- argocd/namespace-istio-system.yaml
 #- argocd/namespace-openldap.yaml
-#- argocd/namespace-sealed-secrets.yaml
-#- argocd/namespace-tools.yaml
+- argocd/namespace-sealed-secrets.yaml
+- argocd/namespace-tools.yaml
 #- argocd/namespace-instana-agent.yaml
 #- argocd/namespace-robot-shop.yaml
 #- argocd/namespace-openshift-serverless.yaml
@@ -22,15 +22,15 @@ resources:
 #- argocd/namespace-spp-velero.yaml
 #- argocd/namespace-baas.yaml
 - argocd/namespace-db2.yaml
-#- argocd/namespace-mq.yaml
-#- argocd/namespace-b2bi-prod.yaml
+- argocd/namespace-mq.yaml
+- argocd/namespace-b2bi-prod.yaml
 #- argocd/namespace-b2bi-nonprod.yaml
 #- argocd/namespace-pem.yaml
 #- argocd/serviceaccounts-ibm-common-services.yaml
-#- argocd/serviceaccounts-tools.yaml
-#- argocd/serviceaccounts-db2.yaml
-#- argocd/serviceaccounts-mq.yaml
-#- argocd/serviceaccounts-b2bi-prod.yaml
+- argocd/serviceaccounts-tools.yaml
+- argocd/serviceaccounts-db2.yaml
+- argocd/serviceaccounts-mq.yaml
+- argocd/serviceaccounts-b2bi-prod.yaml
 #- argocd/serviceaccounts-b2bi-nonprod.yaml
 #- argocd/serviceaccounts-pem.yaml
 #- argocd/sfg-b2bi-clusterwide.yaml
