--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -21,9 +21,9 @@ resources:
 #- argocd/namespace-spp.yaml
 #- argocd/namespace-spp-velero.yaml
 #- argocd/namespace-baas.yaml
-- argocd/namespace-db2.yaml
-- argocd/namespace-mq.yaml
-- argocd/namespace-b2bi-prod.yaml
+#- argocd/namespace-db2.yaml
+#- argocd/namespace-mq.yaml
+#- argocd/namespace-b2bi-prod.yaml
 #- argocd/namespace-b2bi-nonprod.yaml
 #- argocd/namespace-pem.yaml
 #- argocd/serviceaccounts-ibm-common-services.yaml
