--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -22,7 +22,7 @@ resources:
 #- argocd/namespace-spp-velero.yaml
 #- argocd/namespace-baas.yaml
 - argocd/namespace-db2.yaml
-- argocd/namespace-mq.yaml
+# - argocd/namespace-mq.yaml
 - argocd/namespace-b2bi-prod.yaml
 #- argocd/namespace-b2bi-nonprod.yaml
 #- argocd/namespace-pem.yaml
