--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -71,7 +71,7 @@ resources:
 #- argocd/instances/ibm-sfg-b2bi-prod-setup.yaml
 #- argocd/instances/ibm-sfg-b2bi-prod.yaml
 #- argocd/instances/ibm-sfg-db2-nonprod.yaml
-#- argocd/instances/ibm-sfg-mq-nonprod.yaml
+- argocd/instances/ibm-sfg-mq-nonprod.yaml
 #- argocd/instances/ibm-sfg-b2bi-nonprod-setup.yaml
 #- argocd/instances/ibm-sfg-b2bi-nonprod.yaml
 
