--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -21,15 +21,15 @@ resources:
 #- argocd/namespace-spp.yaml
 #- argocd/namespace-spp-velero.yaml
 #- argocd/namespace-baas.yaml
-- argocd/namespace-db2.yaml
-- argocd/namespace-mq.yaml
+#- argocd/namespace-db2.yaml
+#- argocd/namespace-mq.yaml
 - argocd/namespace-b2bi-prod.yaml
 #- argocd/namespace-b2bi-nonprod.yaml
 #- argocd/namespace-pem.yaml
 #- argocd/serviceaccounts-ibm-common-services.yaml
-- argocd/serviceaccounts-tools.yaml
-- argocd/serviceaccounts-db2.yaml
-- argocd/serviceaccounts-mq.yaml
+#- argocd/serviceaccounts-tools.yaml
+#- argocd/serviceaccounts-db2.yaml
+#- argocd/serviceaccounts-mq.yaml
 - argocd/serviceaccounts-b2bi-prod.yaml
 #- argocd/serviceaccounts-b2bi-nonprod.yaml
 #- argocd/serviceaccounts-pem.yaml
